--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.2.3",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.12.2",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
+    "expo-cli": "^6.3.12",
     "expo-status-bar": "~1.12.1",
-    "react": "18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-heroicons": "^4.0.0",
-    "react-native-reanimated": "^3.15.4",
+    "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2"
   },
